# vulkan_android

./: readme.md
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/nativecpp/: ExampleInstrumentedTest.kt
app/src/main/cpp/: moche.cpp  vulkan_loader.cpp
app/src/main/include/Helper/: Camera.hpp  CommandManager.hpp  DescriptorManager.hpp  gltf_loader.hpp
app/src/main/include/Rendering/: Context.hpp  Model.hpp  Render_Context.hpp  Render_Frame.hpp  Texture.hpp
app/src/main/include/Rendering/Render_Target/: Depth_Render_Target.hpp  Final_RenderTarget.hpp  MultiSampler_Render_Target.hpp  Render_Target.hpp
app/src/main/include/Tool/: stb_image.h
app/src/main/include/Wrapper/: Base.hpp  Buffer.hpp  CommandBuffer.hpp  CommandPool.hpp  CommandQueue.hpp  Component.hpp  DebugUtil.hpp  DescriptorPool.hpp  DescriptorSet.hpp  Device.hpp  Fence.hpp  FrameBuffer.hpp  Image.hpp  Instance.hpp  Pipeline.hpp  RenderPass.hpp  Sampler.hpp  Semaphore.hpp  ShaderModule.hpp  SwapChain.hpp  Uniform.hpp  Window_Surface.hpp
app/src/main/src/Rendering/: Context.cpp
app/src/main/src/imgui/: CMakeLists.txt  ImGui_Context.cpp  imgui.cpp  imgui_demo.cpp1  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_widgets.cpp
app/src/test/java/com/example/mousechannel/: ExampleUnitTest.kt
app/src/test/java/com/example/nativecpp/: ExampleUnitTest.kt
